--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "@oceanprotocol/dockerhub-proxy",
+  "name": "docker-free/dockerhub-proxy",
   "description": "Microservice API endpoint to validate Docker image URLs.",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "Apache-2.0",
-  "homepage": "https://oceanprotocol.com",
+  "main": "./dist/app.js",
   "scripts": {
     "start": "vercel dev",
+    "start:docker": "node dist/src/app.js",
+    "dev": "nodemon",
+    "local": "nodemon src/app.ts",
+    "build": "npm run clean && tsc --sourcemap --noEmit false",
     "test": "npm run lint && npm run type-check",
     "lint": "eslint --ignore-path .gitignore --ext .js --ext .ts --ext .tsx .",
     "format": "prettier --ignore-path .gitignore './**/*.{css,yml,js,ts,tsx,json}' --write",
+    "clean": "rm -rf ./dist",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "^0.25.0"
+    "axios": "^0.25.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
@@ -23,12 +33,9 @@
     "eslint-config-oceanprotocol": "^1.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.4.1",
     "typescript": "^4.3.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/oceanprotocol/dockerhub-proxy"
   },
   "engines": {
     "node": ">=14"
